port startjboss script enhancements to windows (ability to set JVM settings) and update usage text